{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 15,
  "lineage": "e841b0f9-8949-3673-c501-a6f0aeb9e8f4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "openvpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-029cb972e1b8a4bca",
            "arn": "arn:aws:ec2:ap-south-1:342710734324:instance/i-0ae56d30a5297228c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ae56d30a5297228c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "EC2Acces",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03527798414b55332",
            "private_dns": "ip-10-0-1-105.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.105",
            "public_dns": "ec2-43-205-112-16.ap-south-1.compute.amazonaws.com",
            "public_ip": "43.205.112.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ff0395e3c74a4e1e",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c0af0d3d7e10cd8",
            "tags": {
              "Name": "OpenVpn"
            },
            "tags_all": {
              "Name": "OpenVpn"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-067ea2a112dfbe5a7"
            ]
          },
          "dependencies": [
            "aws_security_group.openvpn_sg",
            "aws_subnet.openvpn-public-1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "openvpn-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:342710734324:internet-gateway/igw-054bea2352edce313",
            "id": "igw-054bea2352edce313",
            "owner_id": "342710734324",
            "tags": {
              "Name": "OpenVpn IGW"
            },
            "tags_all": {
              "Name": "OpenVpn IGW"
            },
            "vpc_id": "vpc-0c164b1c10f01138d"
          },
          "dependencies": [
            "aws_vpc.openvpn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "openvpn-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:342710734324:route-table/rtb-0c6bc597052c872f2",
            "id": "rtb-0c6bc597052c872f2",
            "owner_id": "342710734324",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-054bea2352edce313",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "OpenVpn Public 1"
            },
            "tags_all": {
              "Name": "OpenVpn Public 1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c164b1c10f01138d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.openvpn-gw",
            "aws_vpc.openvpn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "openvpn-public-1-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bf64842d352d85f",
            "route_table_id": "rtb-0c6bc597052c872f2",
            "subnet_id": "subnet-06c0af0d3d7e10cd8"
          },
          "dependencies": [
            "aws_internet_gateway.openvpn-gw",
            "aws_route_table.openvpn-public",
            "aws_subnet.openvpn-public-1",
            "aws_vpc.openvpn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "openvpn-public-2-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ded9e133070dbf72",
            "route_table_id": "rtb-0c6bc597052c872f2",
            "subnet_id": "subnet-0bf6cb74d14d87c3e"
          },
          "dependencies": [
            "aws_internet_gateway.openvpn-gw",
            "aws_route_table.openvpn-public",
            "aws_subnet.openvpn-public-2",
            "aws_vpc.openvpn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "openvpn-public-3-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071576da37d46679b",
            "route_table_id": "rtb-0c6bc597052c872f2",
            "subnet_id": "subnet-0860154d3e5bfb720"
          },
          "dependencies": [
            "aws_internet_gateway.openvpn-gw",
            "aws_route_table.openvpn-public",
            "aws_subnet.openvpn-public-3",
            "aws_vpc.openvpn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "openvpn_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:342710734324:security-group/sg-067ea2a112dfbe5a7",
            "description": "security group that allows ssh and all egress traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067ea2a112dfbe5a7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1194,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 1194
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 943,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 943
              }
            ],
            "name": "openvpn_sg",
            "name_prefix": "",
            "owner_id": "342710734324",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "OpenVpn Access"
            },
            "tags_all": {
              "Name": "OpenVpn Access"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c164b1c10f01138d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.openvpn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main-private-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:342710734324:subnet/subnet-0beca46135a391aaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0beca46135a391aaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "342710734324",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "main-private-1"
            },
            "tags_all": {
              "Name": "main-private-1"
            },
            "vpc_id": "vpc-0c164b1c10f01138d"
          },
          "dependencies": [
            "aws_vpc.openvpn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "openvpn-public-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:342710734324:subnet/subnet-06c0af0d3d7e10cd8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c0af0d3d7e10cd8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "342710734324",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "OpenVpn Public 1"
            },
            "tags_all": {
              "Name": "OpenVpn Public 1"
            },
            "vpc_id": "vpc-0c164b1c10f01138d"
          },
          "dependencies": [
            "aws_vpc.openvpn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "openvpn-public-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:342710734324:subnet/subnet-0bf6cb74d14d87c3e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf6cb74d14d87c3e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "342710734324",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "OpenVpn Public 2"
            },
            "tags_all": {
              "Name": "OpenVpn Public 2"
            },
            "vpc_id": "vpc-0c164b1c10f01138d"
          },
          "dependencies": [
            "aws_vpc.openvpn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "openvpn-public-3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:342710734324:subnet/subnet-0860154d3e5bfb720",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0860154d3e5bfb720",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "342710734324",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "OpenVpn Public 3"
            },
            "tags_all": {
              "Name": "OpenVpn Public 3"
            },
            "vpc_id": "vpc-0c164b1c10f01138d"
          },
          "dependencies": [
            "aws_vpc.openvpn_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "openvpn_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:342710734324:vpc/vpc-0c164b1c10f01138d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-004d52293702237d7",
            "default_route_table_id": "rtb-03a31e3ad0ad954f6",
            "default_security_group_id": "sg-0f9094fadd567a1ef",
            "dhcp_options_id": "dopt-0ba288a26b1825b9e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c164b1c10f01138d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-03a31e3ad0ad954f6",
            "owner_id": "342710734324",
            "tags": {
              "Name": "OpenVpn Terraform"
            },
            "tags_all": {
              "Name": "OpenVpn Terraform"
            }
          }
        }
      ]
    }
  ]
}